[package]
name = "quartz"
version = "0.1.0"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mitghi/quartz.rs"
documentation = "https://github.com/mitghi/quartz.rs"
homepage = "https://github.com/mitghi/quartz.rs"
description = "Minimalistic scheduling library for Rust"
keywords = ["job-scheduler", "scheduler", "background-jobs", "crossbeam"]
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
priority-queue = "1.2.2"
crossbeam = "0.8.1"
threadpool-crossbeam-channel = "1.8.0"
log = "0.4"
env_logger = "0.9.0"