[package]
name = "quartz_sched"
version = "0.1.11"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mitghi/quartz.rs"
documentation = "https://docs.rs/quartz_sched/"
homepage = "https://github.com/mitghi/quartz.rs"
description = "Minimalistic scheduling library for Rust"
keywords = ["job-scheduler", "scheduler", "background-jobs", "crossbeam"]
categories = ["concurrency", "asynchronous", "algorithms"]
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.2.2"
crossbeam = "0.8.1"
threadpool-crossbeam-channel = "1.8.0"
